# nexus-core

./: .gitignore  DEPLOY_PI_CLUSTER.md  Dockerfile  README.md  Spirallaspan.Dockerfile  UniversalQuantumConsciousness.ipynb  __init__.py  app.py  boot_controller.py  build_pi_image.sh  cognikube_full_fixed.py  deploy_nexus.py  deployment.yaml  docker-deploy.yml  genesis.py  index.css  index.html  index.tsx  metadata.json  model_pipeline_orchestrator.py  nexus_core_deployment.py  nexus_gatewayv1.py  nexus_probe.py  package.json  quick_deploy.sh  railway.json  render.yaml  requirements.txt  run_scout.sh
.github/workflows/: deploy.yaml
app/acidemikubes/: AcidemiKube_OS.py  cognikube_os_complete.py  learning_core.py  metatron_router.py  viren_N_acidemiKubes.py
app/anynode/app/common/macro-orchestration/llm-router/gateway/: .env.example  Dockerfile (2)  app (2).py  app.py  metatron_gate.py  pyproject.toml  requirements.txt
app/anynode/app/common/macro-orchestration/llm-router/gateway/app/: moe.py  prompts.py
app/archive/nexus_memory_20251104_123121/app/common/micro-orchestration/llm-router/gateway/: pyproject.toml
app/council/: bert_pool.py  council_adapter.py  council_core.py  council_glue.py  council_integrity.py  council_ledger.py  council_of_mirrors.py  council_shield.py  council_voting.py  cpu_pinning_manager.py
app/genesis_system/: fireware_tagin.py  firmware_comms.py  firmware_orchistrator.py  genesis_logic.py  qdrant_system_state.py  role_optimization.py  specialization_engine.py  staggered_polling.py  universal_base.py  viren_alert_system.py
app/nexus-cognition/: lilith_orchestrator.py
app/nexus_vison/: Dockerfile
app/trinity_fx/: nexus_full_cosmos.py  sovereign_trinity_integrated.py  trinity_automation_system.py  trinity_chaos_engine.py  trinity_graphics_v2.py
app/utility/: evolution_engine.py  firestore_adapter.py  firestore_agent.py  firestore_logger.py  fleet_daemon.py  fleet_registry.py  (+15 more)
config/: lattice_conf.json
core/: Acidemikube_os.py  Aries_OS_middleware.py  NEXUS_COSMIC_MEMORY_SYSTEM.py  acidemikubePro.py  anava_consciousness_grid.py  anava_core.py  aries_quantum_router.py  consciousness_resolution_protocol.py  consciousness_transformer.py  core.pyz  cors_mitigrator.py  data_hunter.py  deploy_anava_nexus.py  deploy_crown.py  deploy_final_crown.py  deploy_nexus_unified.py  diagnostics.py  final_nexus_integration.py  firewall-enhanced_metraton_firewall.py  genesis_orchestrator.py  heroku_cli.py  herokuwebshell.py  lilith_anava_integration.py  lilithfull_boot.py  lillith_uni_core_firmWithMem.py  lsrnv2_digital_soul_emergence.py  meta_models.py  metatron_chaos_hub_core.py  metatron_comprehensive.py  metatron_core.py  metatron_download_manager.py  metatron_routed_coupler.py  metatron_router.py  metatron_shaktipat.py  metron_engine.py  modal_change_tracker.py  modal_lilith_full_boot.py  module_Os_Implimentations.py  module_os_framework.py  multi_site_runner.py  (+36 more)
docs/: CONNECTING_NEW_NODES.md
lattice/: core.py  security.py
src/: App.tsx  types.ts
templates/: new_agent_template.py
valhalla/: __init__.py  orchestrator.py  providers.py  registry.py  scouts.py
(+3562 files in other folders)
