[tool.poetry]
name = "eden-engineering"
version = "0.1.0"
description = "Eden AI orchestration and agent bridge"
authors = ["Chad Kupar <chad.kupar@aetherealnexus.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
requests = "^2.32.3"
vllm = "^0.8.5"
torch = "^2.7.0"
transformers = "^4.52.3"
huggingface-hub = "^0.32.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
httpx = "^0.28.1"
aiohttp = "^3.12.0"
numpy = "^2.2.6"
pydantic = "^2.11.5"
python-dotenv = "^1.1.0"
openai = "^1.82.0"
tiktoken = "^0.9.0"
PyYAML = "^6.0.2"
Pillow = "^11.2.1"
psutil = "^7.0.0"
tqdm = "^4.67.1"
safetensors = "^0.5.3"
tokenizers = "^0.21.1"
einops = "^0.8.1"
scipy = "^1.15.3"
networkx = "^3.4.2"
packaging = "^25.0"
filelock = "^3.18.0"
fsspec = "^2025.5.1"
regex = "^2024.11.6"
Jinja2 = "^3.1.6"
MarkupSafe = "^3.0.2"
Werkzeug = "^3.1.3"
click = "^8.1.8"
itsdangerous = "^2.2.0"
blinker = "^1.9.0"
certifi = "^2025.4.26"
charset-normalizer = "^3.4.2"
idna = "^3.10"
urllib3 = "^2.4.0"
anyio = "^4.9.0"
sniffio = "^1.3.1"
h11 = "^0.16.0"
httpcore = "^1.0.9"
httptools = "^0.6.4"
websockets = "^15.0.1"
watchfiles = "^1.0.5"
python-multipart = "^0.0.20"
email-validator = "^2.2.0"
starlette = "^0.46.2"
fastapi-cli = "^0.0.7"
typer = "^0.15.4"
shellingham = "^1.5.4"
rich = "^14.0.0"
typing-extensions = "^4.13.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
